--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.0",
     "twin.macro": "^3.1.0",
     "vite-plugin-babel-macros": "^1.0.6",
     "vite-plugin-windicss": "^1.8.10"
