--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@tanstack/react-query": "^4.24.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.8.0",
     "twin.macro": "^3.1.0",
     "vite-plugin-babel-macros": "^1.0.6",
