--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.14",
     "@reduxjs/toolkit": "^1.9.2",
     "@tanstack/react-query": "^4.24.4",
     "formik": "^2.2.9",
@@ -23,6 +24,7 @@
     "zustand": "^4.3.2"
   },
   "devDependencies": {
+    "@types/node": "^18.11.19",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@types/styled-components": "^5.1.26",
@@ -30,6 +32,8 @@
     "autoprefixer": "^10.4.13",
     "babel-plugin-styled-components": "^2.0.7",
     "postcss": "^8.4.21",
+    "prettier": "^2.8.3",
+    "prettier-plugin-tailwindcss": "^0.2.2",
     "tailwindcss": "^3.2.4",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
