--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,8 @@
     "@heroicons/react": "^2.0.14",
     "@reduxjs/toolkit": "^1.9.2",
     "@tanstack/react-query": "^4.24.4",
+    "axios": "^1.3.2",
+    "dotenv": "^16.0.3",
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
