--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,3 @@
 REACT_APP_API='https://backend-sneakers.up.railway.app/'
+REACT_APP_AUTH0_CLIENT_ID='dpKc1pJVRNwGXRNEdewkF7YPVhGwc7zQ'
+REACT_APP_AUTH0_DOMAIN='dev-kodc0s8muewlew22.us.auth0.com'
