--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.0.0",
     "@heroicons/react": "^2.0.14",
     "@reduxjs/toolkit": "^1.9.2",
     "@tanstack/react-query": "^4.24.4",
