--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.10",
     "@auth0/auth0-react": "^2.0.0",
     "@heroicons/react": "^2.0.14",
     "@reduxjs/toolkit": "^1.9.2",
@@ -20,10 +21,12 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-responsive-carousel": "^3.2.23",
+    "react-hook-form": "^7.39.2",
     "react-router-dom": "^6.8.0",
     "twin.macro": "^3.1.0",
     "vite-plugin-babel-macros": "^1.0.6",
     "vite-plugin-windicss": "^1.8.10",
+    "yup": "^0.32.11",
     "zustand": "^4.3.2"
   },
   "devDependencies": {
