--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,8 @@
     "@auth0/auth0-react": "^2.0.0",
     "@heroicons/react": "^2.0.14",
     "@reduxjs/toolkit": "^1.9.2",
+    "@stripe/react-stripe-js": "^1.16.4",
+    "@stripe/stripe-js": "^1.46.0",
     "@tanstack/react-query": "^4.24.4",
     "axios": "^1.3.2",
     "dotenv": "^16.0.3",
@@ -21,6 +23,7 @@
     "react-redux": "^8.0.5",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.8.0",
+    "sweetalert": "^2.1.2",
     "twin.macro": "^3.1.0",
     "vite-plugin-babel-macros": "^1.0.6",
     "vite-plugin-windicss": "^1.8.10",
