--- a/client/package.json
+++ b/client/package.json
@@ -9,9 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@hookform/resolvers": "^2.9.10",
     "@auth0/auth0-react": "^2.0.0",
     "@heroicons/react": "^2.0.14",
+    "@hookform/resolvers": "^2.9.10",
     "@reduxjs/toolkit": "^1.9.2",
     "@stripe/react-stripe-js": "^1.16.4",
     "@stripe/stripe-js": "^1.46.0",
@@ -21,9 +21,10 @@
     "formik": "^2.2.9",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.39.2",
+    "react-icons": "^4.7.1",
     "react-redux": "^8.0.5",
     "react-responsive-carousel": "^3.2.23",
-    "react-hook-form": "^7.39.2",
     "react-router-dom": "^6.8.0",
     "sweetalert": "^2.1.2",
     "twin.macro": "^3.1.0",
