--- a/client/package.json
+++ b/client/package.json
@@ -20,9 +20,11 @@
     "@stripe/react-stripe-js": "^1.16.4",
     "@stripe/stripe-js": "^1.46.0",
     "@tanstack/react-query": "^4.24.4",
+    "@types/jwt-decode": "^3.1.0",
     "axios": "^1.3.2",
     "dotenv": "^16.0.3",
     "formik": "^2.2.9",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.2",
